--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <style>
       html,
       body {
+        margin: 0;
         width: 100vw;
         height: 100vh;
         background-color: #fbfbfb;
