[feat] complete stock detail

--- a/public/index.html
+++ b/public/index.html
@@ -17,16 +17,17 @@
       }
 
       @font-face {
-        font-family: "IBMPlexSansKR-Regular";
-        src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/IBMPlexSansKR-Regular.woff")
+        font-family: "NEXON Lv2 Gothic";
+        src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv2 Gothic.woff")
           format("woff");
         font-weight: normal;
         font-style: normal;
       }
 
       * {
-        font-family: "IBMPlexSansKR-Regular";
+        font-family: "NEXON Lv2 Gothic";
         box-sizing: border-box;
+        letter-spacing: 1px;
       }
     </style>
   </head>
