--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 
       * {
         font-family: "NEXON Lv2 Gothic";
-        box-sizing: border-box;
+        box-sizing: border-box !important;
         letter-spacing: 1px;
       }
     </style>
