--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="stylesheet" href="<%= BASE_URL %>css/weather-icons.css" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
-    <style>
-      html,
-      body {
-        margin: 0;
-        width: 100vw;
-        height: 100vh;
-        background-color: #fbfbfb;
-      }
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
+		<link rel="stylesheet" href="<%= BASE_URL %>css/weather-icons.css" />
+		<link rel="icon" href="<%= BASE_URL %>img/icons/favicon.ico" />
+		<link rel="manifest" href="<%= BASE_URL %>manifest.json" />
+		<title><%= htmlWebpackPlugin.options.title %></title>
+		<style>
+			html,
+			body {
+				margin: 0;
+				width: 100vw;
+				height: 100vh;
+				background-color: #fbfbfb;
+			}
 
-      @font-face {
-        font-family: "NEXON Lv2 Gothic";
-        src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv2 Gothic.woff")
-          format("woff");
-        font-weight: normal;
-        font-style: normal;
-      }
+			@font-face {
+				font-family: "NEXON Lv2 Gothic";
+				src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv2 Gothic.woff")
+					format("woff");
+				font-weight: normal;
+				font-style: normal;
+			}
 
-      * {
-        font-family: "NEXON Lv2 Gothic";
-        box-sizing: border-box !important;
-        letter-spacing: 1px;
-      }
-    </style>
-  </head>
-  <body>
-    <noscript>
-      <strong
-        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-        properly without JavaScript enabled. Please enable it to
-        continue.</strong
-      >
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+			* {
+				font-family: "NEXON Lv2 Gothic";
+				box-sizing: border-box !important;
+				letter-spacing: 1px;
+			}
+		</style>
+	</head>
+	<body>
+		<noscript>
+			<strong
+				>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+				properly without JavaScript enabled. Please enable it to
+				continue.</strong
+			>
+		</noscript>
+		<div id="app"></div>
+		<!-- built files will be auto injected -->
+	</body>
 </html>
